--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        run: docker swarm init --default-addr-pool 10.20.0.0/16
+      - name: 'Create proxy network'
+        run: make docker-create-network
+      - name: 'Build containers'
+        run: make docker-deploy
       - name: Cache npm packages
         id: npm-cache
         uses: actions/cache@v2
