--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/checkout@v2
         run: docker swarm init --default-addr-pool 10.20.0.0/16
       - name: 'Create proxy network'
-        run: make docker-create-network
+        run: make docker create-network
       - name: 'Build containers'
-        run: make docker-deploy
+        run: make docker deploy
       - name: Cache npm packages
         id: npm-cache
         uses: actions/cache@v2
@@ -40,4 +40,4 @@ jobs:
       - name: Linter README.md
         run: make linter-readme
       - name: Launch build
-        run: make build-ci
+        run: make build
