fix(url): change to quasar.traefik.me

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
         - "traefik.http.routers.quasar.rule=Host(`quasar.traefik.me`)"
         - "traefik.http.routers.quasar-tls.tls.domains[0].main=quasar.traefik.me"
         - "traefik.http.routers.quasar-tls.tls.domains[0].sans=quasar-*.traefik.me"
-        - "traefik.http.services.www-quasar.loadbalancer.server.port=4200"
+        - "traefik.http.services.quasar.loadbalancer.server.port=4200"
