feat(dependencies): use command docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,14 @@ networks:
     driver: overlay
     attachable: true
 services:
+  exec:
+    image: koromerzhin/nodejs:1.1.3-quasar
+    volumes:
+      - ${PWD}/apps:/app
+    command: sh -c "npm install"
+    deploy:
+      labels:
+        - "traefik.enable=false"
   www:
     image: koromerzhin/nodejs:1.1.3-quasar
     volumes:
