fix(docker): add host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     deploy:
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.quasar.rule=Host(`quasar.traefik.me`)"
+        - "traefik.http.routers.quasar.rule=HostRegexp(`quasar.traefik.me`, `quasar.{ip:.*}.traefik.me`)"
         - "traefik.http.routers.quasar-tls.tls.domains[0].main=quasar.traefik.me"
         - "traefik.http.routers.quasar-tls.tls.domains[0].sans=quasar-*.traefik.me"
         - "traefik.http.services.quasar.loadbalancer.server.port=80"
