--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.4"
 networks:
-  proxynetwork:
+  proxylampy:
     external: true
   net:
     driver: overlay
@@ -21,7 +21,7 @@ services:
     volumes:
       - ${PWD}/apps:/app
     networks:
-      - proxynetwork
+      - proxylampy
       - net
     deploy:
       labels:
