--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
     attachable: true
 services:
   exec:
-    image: koromerzhin/nodejs:1.1.3-quasar
+    image: koromerzhin/quasar:1.1.3
     volumes:
       - ${PWD}/apps:/app
     command: sh -c "npm install"
