--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,11 @@ networks:
     driver: overlay
     attachable: true
 services:
-  exec:
-    image: koromerzhin/quasar:1.1.3
-    volumes:
-      - ${PWD}/apps:/app
-    command: sh -c "npm install"
-    deploy:
-      restart_policy:
-        condition: none
-      labels:
-        - "traefik.enable=false"
   www:
-    image: koromerzhin/nodejs:1.1.3-quasar
+    image: node:15.14.0
+    working_dir: /app
+    command: >
+      sh -c "npm install -g @quasar/cli@1.2.2 && npm install && quasar dev"
     volumes:
       - ${PWD}/apps:/app
     networks:
